# obsidian-file-api

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  file_handler.py  main.py  pyproject.toml
.github/workflows/: build.yaml
app/: env.py  exception.py  file_handler.py  main.py  router.py  test_main.py
app/test/: conftest.py  test_main.py
app/test/v1/files/: test_get.py
app/test/v1/files/read/: test_get.py
app/test/v1/files/write/: test_patch.py  test_post.py
utils/: check_version.py
