[project]
name = "obsidian-file-api"
version = "0.1.0"
description = "File API for Obsidian vaults using FastAPI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.121.1",
    "loguru>=0.7.3",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "httpx>=0.28.1",
    "isort>=7.0.0",
    "pre-commit>=4.4.0",
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.4",
]
